Some date values not handled consistently with IE/Firefox https://bugs.webkit.org/show_bug.cgi?id=14176

Patch by Max Vujovic <mvujovic@adobe.com> on 2011-11-30
Reviewed by Gavin Barraclough.

Changed time zone offset parsing behavior to match IE/Firefox/Opera's in
implementation dependent cases like "GMT-4".

Source/JavaScriptCore:

* wtf/DateMath.cpp:
(WTF::parseDateFromNullTerminatedCharacters):

LayoutTests:

* wtf/DateMath.cpp:
(WTF::parseDateFromNullTerminatedCharacters):

Canonical link: https://commits.webkit.org/90054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101582 268f45cc-cd09-0410-ab3c-d52691b4dbfc